# pelican-summary-link

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yaml  main-updated.yaml  publish-to-pypi.yaml
src/pelican/plugins/summary_link/: __init__.py  summary_link.py
tests/: test_summary_link.py
